doc news/15: fold long lines

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -9,14 +9,21 @@
 
 #### {ref}`offline-index-construction`: Fixed a bug that options may be ignored in parallel construction
 
-Groonga may ignore options of {doc}`/reference/normalizers`, {doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in the target index when offline index construction is executed in parallel.
+Groonga may ignore options of {doc}`/reference/normalizers`,
+{doc}`/reference/tokenizers` and/or {doc}`/reference/token_filters` in
+the target index when offline index construction is executed in
+parallel.
 
 This issue may occur when:
 
 - Offline index construction is executed in parallel.
-- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, and/or {doc}`/reference/token_filters` options are used.
+- {doc}`/reference/normalizers`, {doc}`/reference/tokenizers`, and/or
+  {doc}`/reference/token_filters` options are used.
 
-If {doc}`/reference/normalizers/normalizer_table` is used and this happens, the offline index construction is failed. Because {doc}`/reference/normalizers/normalizer_table` has a required parameter. If options are ignored, the required parameter is missing.
+If {doc}`/reference/normalizers/normalizer_table` is used and this
+happens, the offline index construction is failed. Because
+{doc}`/reference/normalizers/normalizer_table` has a required
+parameter. If options are ignored, the required parameter is missing.
 
 <!-- prettier-ignore-start -->
 (release-15-0-1)=
