doc news/15: add 15.0.3 entry

--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,30 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-3)=
+## Release 15.0.3 - 2025-03-10
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### {ref}`offline-index-construction`: Added support for parallel construction with {ref}`table-hash-key` lexicon
+
+Parallel offline index construction iterates sorted terms
+internally. {ref}`table-pat-key` and {ref}`table-pat-key` can do it
+effectively because they are based on tree. But {ref}`table-hash-key`
+can't do it effectively because it's not based on tree. So we didn't
+support parallel offline index construction with
+{ref}`table-hash-key` lexicon.
+
+This release adds support for parallel offline index construction with
+{ref}`table-hash-key` lexicon. It sort terms in a normal way. So it's
+not so effective. Parallel offline index construction with
+{ref}`table-hash-key` lexicon will be slower than
+{ref}`table-pat-key`/{ref}`table-dat-key`. But it may be faster than
+sequential offline index construction with {ref}`table-hash-key`
+lexicon.
+
+<!-- prettier-ignore-start -->
 (release-15-0-2)=
 ## Release 15.0.2 - 2025-02-21
 <!-- prettier-ignore-end -->
