--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.3-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Sutou Kouhei <kou@clear-code.com>  Mon, 10 Mar 2025 06:39:12 -0000
+
 groonga (15.0.2-1) unstable; urgency=low
 
   * New upstream release.
