--- a/doc/locale/ja/LC_MESSAGES/contribution/development/release.po
+++ b/doc/locale/ja/LC_MESSAGES/contribution/development/release.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: 1.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"PO-Revision-Date: 2016-03-23 13:57+0900\n"
+"PO-Revision-Date: 2025-03-10 15:46+0900\n"
 "Language-Team: Japanese\n"
 "Language: ja\n"
 "MIME-Version: 1.0\n"
@@ -154,8 +154,8 @@ msgstr ""
 msgid "``rake release`` の実行"
 msgstr ""
 
-msgid "``rake release`` コマンドでは、 ``NEW_RELEASE_DATE`` にリリースの日付（≒ 実行日）を指定します。"
-msgstr ""
+msgid "Run ``rake release`` to release a new version:"
+msgstr "新しいバージョンをリリースするために ``rake release`` を実行します。"
 
 msgid "``release`` タスクは次の3つのタスクを実行します。"
 msgstr ""
@@ -165,6 +165,9 @@ msgstr ""
 
 msgid "RPMパッケージのspecファイルに新しいバージョンのチェンジログを追記したりなどします。"
 msgstr ""
+
+msgid "You can change release date by ``NEW_RELEASE_DATE``."
+msgstr "``NEW_RELEASE_DATE`` でリリース日を変更できます。"
 
 msgid "``release:tag``"
 msgstr ""
