Remove unnecessary escape

--- a/doc/locale/ja/LC_MESSAGES/community.po
+++ b/doc/locale/ja/LC_MESSAGES/community.po
@@ -43,7 +43,7 @@ msgstr "|inline-zulip-logo| [#zulip-license]_ `Zulip <https://zulip.com/>`_ „ÅØ„
 msgid "inline-zulip-logo"
 msgstr ""
 
-msgid "Copyright 2011-2020 Dropbox, Inc., Kandra Labs, Inc., and contributors (`NOTICE <https://github.com/zulip/zulip/blob/c1c9a2e8ee9373fb224764a2bce46f6c8f92225e/NOTICE>`_\\)"
+msgid "Copyright 2011-2020 Dropbox, Inc., Kandra Labs, Inc., and contributors (`NOTICE <https://github.com/zulip/zulip/blob/c1c9a2e8ee9373fb224764a2bce46f6c8f92225e/NOTICE>`_)"
 msgstr ""
 
 msgid "Zulip is distributed under the `Apache 2.0 license <https://github.com/zulip/zulip/blob/main/LICENSE>`_. Zulip logo used on this page are also distributed under the same license."
