--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -1,6 +1,21 @@
 # News - 15 series
 
 <!-- prettier-ignore-start -->
+(release-15-0-4)=
+## Release 15.0.4 - 2025-03-29
+<!-- prettier-ignore-end -->
+
+### Improvements
+
+#### Clarified `X / -1` and `X / -1.0` semantics
+
+In many languages, `X / -1` and `X / -1.0` return `-X`. But Groonga
+may not return `-X` when `X` is unsigned integer.
+
+This is a backward incompatible change but we assume that no user
+depends on this behavior.
+
+<!-- prettier-ignore-start -->
 (release-15-0-3)=
 ## Release 15.0.3 - 2025-03-10
 <!-- prettier-ignore-end -->
