--- a/doc/source/news/15.md
+++ b/doc/source/news/15.md
@@ -12,6 +12,8 @@
 In many languages, `X / -1` and `X / -1.0` return `-X`. But Groonga
 may not return `-X` when `X` is unsigned integer.
 
+`X / -1` and `X / -1.0` always return `-X` from this release.
+
 This is a backward incompatible change but we assume that no user
 depends on this behavior.
 
