--- a/packages/debian/changelog
+++ b/packages/debian/changelog
@@ -1,3 +1,9 @@
+groonga (15.0.4-1) unstable; urgency=low
+
+  * New upstream release.
+
+ -- Sutou Kouhei <kou@clear-code.com>  Fri, 28 Mar 2025 07:28:00 -0000
+
 groonga (15.0.3-1) unstable; urgency=low
 
   * New upstream release.
