--- a/doc/locale/ja/LC_MESSAGES/migrate_from_ppa.po
+++ b/doc/locale/ja/LC_MESSAGES/migrate_from_ppa.po
@@ -69,4 +69,4 @@ msgid "For example, install a specific version of `groonga-bin` package:"
 msgstr "例えば、`groonga-bin`パッケージの特定バージョンを指定する場合は、次のようにインストールします。"
 
 msgid "This command forces the installation of a specific package version from the new repository. In this case, it's Groonga APT repository."
-msgstr "このコマンドは、Groonga APTリポジトリーから特定のパッケージバージョン（この例では15.0.4-1）を強制的にインストールします。"
+msgstr "このコマンドは、Groonga APTリポジトリーから特定のパッケージバージョンを強制的にインストールします。"
