--- a/doc/locale/ja/LC_MESSAGES/install/ubuntu.po
+++ b/doc/locale/ja/LC_MESSAGES/install/ubuntu.po
@@ -157,20 +157,20 @@ msgstr "パッケージをアップグレード"
 msgid "There are two approaches depending on your needs."
 msgstr "ニーズに応じて、パッケージをアップグレードしてください。方法は2通りあります。"
 
-msgid "Option 1: Use Groonga APT Repository to upgrade the Next Package Version (Recommended)"
-msgstr "オプション 1: 次のパッケージバージョンからGroonga APTリポジトリーを利用してアップグレードする (オススメ)"
+msgid "Option 1: Use Groonga APT Repository from the Next Release (Recommended)"
+msgstr "オプション 1: 次のリリースからGroonga APTリポジトリーを利用する"
 
 msgid "Starting with the next package version, we strongly recommend using the Groonga APT Repository. When you upgrade Groonga via `apt`, you will automatically receive the next package version without having to specify a version explicitly as follows. This option is simpler and is recommended for most users:"
-msgstr "次のパッケージバージョンをアップグレードする際に、Groonga APTリポジトリーを使用することを強くお勧めします。`apt`経由でパッケージをアップグレードすると、バージョンを明示的に指定することなく、次のパッケージバージョンをGroonga APTリポジトリーから自動的にアップグレードできます。最もシンプルな方法なので、こちらをオススメします。"
+msgstr "次のリリースパッケージバージョンへアップグレードする時から、Groonga APTリポジトリーを使用することを強くお勧めします。`apt`経由でパッケージをアップグレードすると、バージョンを明示的に指定することなく、次のパッケージバージョンにGroonga APTリポジトリーを利用して自動的にアップグレードできます。最もシンプルな方法なので、こちらをオススメします。"
 
 msgid "For example, upgrade `groonga-bin` package:"
 msgstr "例えば、`groonga-bin`パッケージの場合は、次のようにアップグレードします。"
 
-msgid "Option 2: Use Groonga APT Repository to upgrade the Existing Package Version"
-msgstr "オプション 2: 既存パッケージバージョンをGroonga APTリポジトリーを利用してアップグレードする"
+msgid "Option 2: Use Groonga APT Repository Immediately Without Waiting for Next Release"
+msgstr "オプション 2: 次のリリースを待たずにGroonga APTリポジトリーを利用する"
 
-msgid "If you wish to continue using the same package version as before, you must upgrade the package by specifying the version. This is important because even if the version numbers match, the package's naming conventions between the Groonga PPA and the Groonga APT Repository differ, and the Groonga PPA package takes precedence."
-msgstr "現在の利用している同じバージョンのパッケージを使い続けたい場合は、バージョンを指定してアップグレードする必要があります。これは、バージョンが一致していても、Groonga PPAとGroonga APTリポジトリーではパッケージの命名規則が異なるため、Groonga PPAのパッケージが優先されてアップグレードされてしまう問題を防ぐためです。"
+msgid "If you wish to upgrade immediately without waiting for the next official release, you can force an upgrade to a specific package version in the Groonga APT Repository. In this case, you must upgrade the package by specifying the version. This is important because even if the version numbers match, the package's naming conventions between the Groonga PPA and the Groonga APT Repository differ, and the Groonga PPA package takes precedence."
+msgstr "もし次のリリースを待たずに即座にアップグレードしたい場合は、Groonga APTリポジトリーの特定のパッケージバージョンへ強制的にアップグレードできます。ただしこの場合は、パッケージバージョンを指定してアップグレードする必要があります。これは、バージョンが一致していても、Groonga PPAとGroonga APTリポジトリーではパッケージの命名規則が異なるため、Groonga PPAのパッケージが優先されてアップグレードされてしまう問題を防ぐためです。"
 
 msgid "If the package has dependencies, you also need to upgrade dependent packages by specifying the version."
 msgstr "パッケージに依存関係がある場合は、依存パッケージもバージョンを指定してアップグレードする必要があります。"
