--- a/doc/locale/ja/LC_MESSAGES/install/ubuntu.po
+++ b/doc/locale/ja/LC_MESSAGES/install/ubuntu.po
@@ -137,7 +137,7 @@ msgid "Configure the Groonga APT Repository"
 msgstr "Groonga APTリポジトリーの設定"
 
 msgid "Register Groonga APT Repository"
-msgstr "Groonga APTリポジトリーの設定"
+msgstr "Groonga APTリポジトリーの登録"
 
 msgid "To register the Groonga APT Repository, install the `groonga-apt-source package` as follows."
 msgstr "Groonga APTリポジトリーを登録するには、次の手順で`groonga-apt-source`パッケージをインストールしてください。"
