--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_expr.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_expr.po
@@ -47,3 +47,6 @@ msgstr "TODO..."
 
 msgid "Reference"
 msgstr "リファレンス"
+
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
