--- a/doc/locale/ja/LC_MESSAGES/reference/api/grn_ii.po
+++ b/doc/locale/ja/LC_MESSAGES/reference/api/grn_ii.po
@@ -35,3 +35,6 @@ msgstr "例"
 
 msgid "Reference"
 msgstr "リファレンス"
+
+msgid "We are currently switching to automatic generation using Doxygen."
+msgstr "現在、Doxygenを使った自動生成に切り替え中です。"
